--- a/VE_CE/SConscript
+++ b/VE_CE/SConscript
@@ -2,13 +2,13 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
-Import( '*' )
-Import('libPath')
+##Import('Platform')
+##Import( '*' )
+##Import('libPath')
 Import('cfdHostType')
 
 
-ce_srcs = Split("""
+srcs = Split("""
    Exe_server.cpp 
    Executive_i.cpp 
    Execute_Thread.cpp  
@@ -20,7 +20,7 @@ ce_srcs = Split("""
 ##   moduleS.cpp  
 ##""")
 
-ce_srcs = map(lambda s: pj('#', 'VE_CE', s), ce_srcs)
+srcs = map(lambda s: pj('#', 'VE_CE', s), srcs)
 ##skel_srcs = map(lambda s: pj('#', 'VE_Open', 'skel', s), skel_srcs)
 
 ##ce_srcs = list()
@@ -29,16 +29,16 @@ ce_srcs = map(lambda s: pj('#', 'VE_CE', s), ce_srcs)
 
 env = baseEnv.Copy()
 ##env.Append(CPPPATH = [os.getcwd()])
-env.Append(CPPPATH = ['#'])
-env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') )
-env.Append(LIBPATH = libPath,
-              LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib', 'VE_CADLib',
-                      'VE_ShaderLib', 'VE_CE_UtilitiesLib', 'VE_OpenModuleLib'])
-for lib in xerces:
-   env.Append(LIBS = lib)
-for lib in ace_tao:
-    env.Append(LIBS = lib) 
+##env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
+##env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') )
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib', 'VE_CADLib',
+                   'VE_ShaderLib', 'VE_CE_UtilitiesLib', 'VE_OpenModuleLib'])
+##for lib in xerces:
+##   env.Append(LIBS = lib)
+##for lib in ace_tao:
+##    env.Append(LIBS = lib) 
 ##for lib in vtk:
 ##   env.Append(LIBS = lib)
 ##for lib in osg:
@@ -49,5 +49,7 @@ env.ParseConfig( 'vpr-config --libs --extra-libs --includes' )
 #env.ParseConfig( 'corona-config --libs' )
 env.ParseConfig( 'vrjuggler-config vrj --libs --extra-libs --includes' )
 env.ParseConfig( 'wx-config --cxxflags --libs' )
+env.ParseConfig('flagpoll tao --libs --cflags')
+env.ParseConfig('flagpoll xerces --libs --cflags')
 
-env.Program(pj('#', 'bin', cfdHostType, 'Exe_server'), source = ce_srcs)
+env.Program(pj('#', 'bin', cfdHostType, 'Exe_server'), source = srcs)
