--- a/VE_Conductor/DefaultPlugin/SConscript
+++ b/VE_Conductor/DefaultPlugin/SConscript
@@ -2,9 +2,9 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
-Import('xerces')
-Import('ace_tao')
+##Import('Platform')
+##Import('xerces')
+##Import('ace_tao')
 Import('libPath')
 
 srcs = Split("""
@@ -13,22 +13,22 @@ srcs = Split("""
 """)
 
 env = baseEnv.Copy()
-
-env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = ['#'])
 ##env.Append(CPPPATH = [os.getcwd()])
 ##env.Append(CPPPATH = pj(os.getenv('TAO_HOME',''), 'include') )
 env.Append(CPPPATH = pj('#', 'VE_Conductor', 'Framework') )
-env.Append(LIBPATH = libPath,
-              LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
-                      'VE_CADLib', 'VE_ShaderLib', 'GUIPluginLib',
-                      'VE_OpenModuleLib'])
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
+                   'VE_CADLib', 'VE_ShaderLib', 'GUIPluginLib',
+                   'VE_OpenModuleLib'])
 
-for lib in xerces:
-    env.Append(LIBS = lib)
-for lib in ace_tao:
-    env.Append(LIBS = lib)
+##for lib in xerces:
+##    env.Append(LIBS = lib)
+##for lib in ace_tao:
+##    env.Append(LIBS = lib)
 env.ParseConfig( 'wx-config --cxxflags --libs' )
-env.ParseConfig('flagpoll tao --cflags')
+env.ParseConfig('flagpoll tao --cflags --libs')
+env.ParseConfig('flagpoll xerces --libs')
 
 ##EXTRA
 ##env.ParseConfig( 'vrjuggler-config --extra-libs' )
