--- a/VE_Builder/Translator/DataLoader/SConscript
+++ b/VE_Builder/Translator/DataLoader/SConscript
@@ -2,9 +2,9 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
-Import( 'vtk' )
-Import( 'boost' )
+##Import('Platform')
+##Import( 'vtk' )
+##Import( 'boost' )
 Import('libPath')
 
 srcs = Split("""
@@ -19,6 +19,7 @@ srcs = Split("""
     StarCDTranslator.cxx
     starReader.cxx
 """)
+
 if os.getenv('FLUENT_MFIX') == 'TRUE':
     srcs.Append('FluentTranslator.cxx')
     srcs.Append('MFIXTranslator.cxx')
@@ -28,10 +29,10 @@ srcs = map(lambda s: pj('#', 'VE_Builder', 'Translator', 'DataLoader', s), srcs)
 env = baseEnv.Copy()
 env.Append(CPPPATH = [os.getcwd()])
 ##env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
-env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = ['#'])
 ##env.Append(CPPPATH = ['#/VE_Builder/Translator'])
-env.Append(LIBPATH = libPath,
-              LIBS = ['VE_UtilLib', 'TranslatorToVTKLib'])
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = ['VE_UtilLib', 'TranslatorToVTKLib'])
 
 env.ParseConfig('flagpoll vtk --libs --cflags')
 env.ParseConfig('flagpoll boost --libs')
