--- a/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
@@ -2,10 +2,11 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
+Import('cfdHostType')
+##Import('Platform')
 ##Import('vtk')
 ##Import('boost')
-Import('libPath')
+##Import('libPath')
 
 srcs = Split("""
    flowTexture.cpp 
@@ -18,20 +19,20 @@ srcs = map(lambda s: pj('#', 'VE_Builder', 'vtkTo3DTexture', 'tcGUI', s), srcs)
 
 env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
-env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = ['#'])
 ##env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
-env.Append(CPPPATH = pj( os.getenv('VJ_DEPS_DIR',''), 'include') )
-env.Append(LIBPATH = libPath,
-              LIBS = 'VE_UtilLib')
+##env.Append(CPPPATH = pj( os.getenv('VJ_DEPS_DIR',''), 'include') )
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = ['VE_UtilLib'])
 
 ##for lib in vtk:
 ##   env.Append(LIBS = lib)
 ##for lib in boost:
 ##   env.Append(LIBS = lib)
 env.ParseConfig('flagpoll vtk --libs --cflags')
-env.ParseConfig('flagpoll boost --libs')
+env.ParseConfig('flagpoll boost --libs --cflags')
 env.ParseConfig('wx-config --cxxflags --libs')
 env.ParseConfig( 'vrjuggler-config --libs --extra-libs --includes' )
 env.ParseConfig( 'vpr-config --libs --extra-libs --includes' )
 
-env.Program(pj('#','bin',Platform,'vtkTo3DTexture'), source = srcs)
+env.Program(pj('#', 'bin', cfdHostType, 'vtkTo3DTexture'), source = srcs)
