--- a/VE_CE/Utilities/SConscript
+++ b/VE_CE/Utilities/SConscript
@@ -2,12 +2,12 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
-Import( '*' )
+##Import('Platform')
+##Import( '*' )
 Import('libPath')
 
 
-ceutil_srcs = Split("""
+srcs = Split("""
    Connection.cxx
    Module.cxx
    node_base.cxx
@@ -20,7 +20,7 @@ ceutil_srcs = Split("""
    Scheduler.cxx  
 """)
 
-ceutil_srcs = map(lambda s: pj('#', 'VE_CE', 'Utilities', s), ceutil_srcs)
+srcs = map(lambda s: pj('#', 'VE_CE', 'Utilities', s), srcs)
 #skel_srcs = map(lambda s: pj('#', 'VE_Open', 'skel', s), skel_srcs)
 
 #ce_srcs = list()
@@ -29,17 +29,16 @@ ceutil_srcs = map(lambda s: pj('#', 'VE_CE', 'Utilities', s), ceutil_srcs)
 
 env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
-env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = ['#'])
 #env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') )
-env.Append(LIBPATH = libPath,
-              LIBS = ['VE_ModelLib', 'VE_XMLLib',
-                      'VE_OpenModuleLib'])
+##env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') )
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = ['VE_ModelLib', 'VE_XMLLib', 'VE_OpenModuleLib'])
 ##NOTE: Change RHEL_4 to generic term later.
-for lib in xerces:
-   env.Append(LIBS = lib)
-for lib in ace_tao:
-    env.Append(LIBS = lib)
+##for lib in xerces:
+##   env.Append(LIBS = lib)
+##for lib in ace_tao:
+##    env.Append(LIBS = lib)
 #for lib in vtk:
 #   env.Append(LIBS = lib)
 #for lib in osg:
@@ -50,6 +49,8 @@ for lib in ace_tao:
 #env.ParseConfig( 'corona-config --libs' )
 #env.ParseConfig( 'vrjuggler-config vrj --libs --extra-libs --includes' )
 #env.ParseConfig( 'wx-config --cxxflags --libs' )
+env.ParseConfig('flagpoll xerces --libs')
+env.ParseConfig('flagpoll tao --libs --cflags')
 
 targetLib = pj(libPath, 'VE_CE_UtilitiesLib')
-env.SharedLibrary(target = targetLib, source = ceutil_srcs)
+env.SharedLibrary(target = targetLib, source = srcs)
