--- a/VE_Conductor/Network/SConscript
+++ b/VE_Conductor/Network/SConscript
@@ -4,8 +4,7 @@ pj = os.path.join
 
 Import('baseEnv')
 Import('libPath')
-Import('xerces')
-
+##Import('xerces')
 
 srcs = Split("""
    interface.cpp 
@@ -21,11 +20,13 @@ srcs = map(lambda s: pj('#', 'VE_Conductor', 'Network', s), srcs)
 
 env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
-env.Append(CPPPATH = ['#'])
-env.Append(LIBPATH = libPath,
-              LIBS = 'VE_XMLLib')
-for lib in xerces:
-   env.Append(LIBS = lib)
+##env.Append(CPPPATH = ['#'])
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = 'VE_XMLLib')
+##for lib in xerces:
+##   env.Append(LIBS = lib)
+env.ParseConfig('flagpoll xerces --libs')
+
 targetLib = pj(libPath, 'VE_ConductorLib')
 env.SharedLibrary(target = targetLib, source = srcs)
 
