--- a/VE_Conductor/Utilities/SConscript
+++ b/VE_Conductor/Utilities/SConscript
@@ -2,9 +2,9 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
-Import('xerces')
-Import('ace_tao')
+##Import('Platform')
+##Import('xerces')
+##Import('ace_tao')
 Import('libPath')
 
 frameworkutil_srcs = Split("""
@@ -22,33 +22,40 @@ frameworkutil_srcs = Split("""
    ROIDialog.cxx
    BaseDialog.cxx
 """)
+
+gui_srcs = Split("""
+    spinctld.cpp
+""")
+
 frameworkutil_srcs = map(lambda s: pj('#', 'VE_Conductor', 'Utilities', s), frameworkutil_srcs)
-srcs = frameworkutil_srcs
-srcs.append(pj('#', 'VE_Builder', 'Utilities', 'gui', 'spinctld.cpp'))
+gui_srcs = map(lambda s: pj('#', 'VE_Builder', 'Utilities', 'gui', s), gui_srcs)
+
+srcs = list()
+srcs.extend(frameworkutil_srcs)
+srcs.extend(gui_srcs)
 
 ##guiplugins_srcs = list()
 ##guiplugins_srcs.extend(framework_srcs)
 
 env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
-env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = ['#'])
 ##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
 ##env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') ) ##ADDITION
-env.Append(LIBPATH = libPath,
-              LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
-                     'VE_CADLib', 'VE_ShaderLib',
-                     'VE_OpenModuleLib'])
-for lib in xerces:
-   env.Append(LIBS = lib)
-for lib in ace_tao:
-   env.Append(LIBS = lib)
-
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
+                   'VE_CADLib', 'VE_ShaderLib', 'VE_OpenModuleLib'])
+##for lib in xerces:
+##   env.Append(LIBS = lib)
+##for lib in ace_tao:
+##   env.Append(LIBS = lib)
 env.ParseConfig('wx-config --cxxflags --libs')
 env.ParseConfig('vrjuggler-config --extra-libs')
-env.ParseConfig('flagpoll tao --cflags')
+env.ParseConfig('flagpoll tao --cflags --libs')
+env.ParseConfig('flagpoll xerces --libs')
 
 targetLib = pj(libPath, 'VE_Conductor_UtilitiesLib')
-env.SharedLibrary(target = targetLib, source = frameworkutil_srcs)
+env.SharedLibrary(target = targetLib, source = srcs)
 
 #env.Program(pj('#','bin',Platform,'VE_CE'), source = frameworkutil_srcs)
 
