--- a/VE_Open/XML/CAD/SConscript
+++ b/VE_Open/XML/CAD/SConscript
@@ -3,9 +3,9 @@ pj = os.path.join
 
 Import('baseEnv')
 Import('libPath')
-Import( 'xerces' )
+##Import( 'xerces' )
 
-cad_srcs = Split("""
+srcs = Split("""
    CADAssembly.cxx
    CADAttribute.cxx
    CADClone.cxx
@@ -17,17 +17,18 @@ cad_srcs = Split("""
    CADNodeAnimation.cxx
 """)
 
-cad_srcs = map(lambda s: pj('#', 'VE_Open', 'XML', 'CAD', s), cad_srcs)
+srcs = map(lambda s: pj('#', 'VE_Open', 'XML', 'CAD', s), srcs)
 
 env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
-env.Append(CPPPATH = ['#'])
-env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-env.Append(LIBPATH = libPath,
-              LIBS = ['VE_XMLLib', 'VE_ShaderLib'])
-for lib in xerces:
-   env.Append(LIBS = lib)
+##env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = ['VE_XMLLib', 'VE_ShaderLib'])
+##for lib in xerces:
+##   env.Append(LIBS = lib)
+
 
 targetLib = pj(libPath, 'VE_CADLib')
-env.SharedLibrary(target = targetLib, source = cad_srcs)
+env.SharedLibrary(target = targetLib, source = srcs)
 #env.Program(pj('#','bin',Platform,'VE_Open','VE_XML'), source = cad_srcs)
