--- a/VE_Open/XML/Model/SConscript
+++ b/VE_Open/XML/Model/SConscript
@@ -3,9 +3,9 @@ pj = os.path.join
 
 Import('baseEnv')
 Import('libPath')
-Import('xerces')
+##Import('xerces')
 
-model_srcs = Split("""
+srcs = Split("""
    Point.cxx
    Port.cxx
    Link.cxx
@@ -15,17 +15,18 @@ model_srcs = Split("""
    ModelCreator.cxx 
 """)
 
-model_srcs = map(lambda s: pj('#', 'VE_Open', 'XML', 'Model', s), model_srcs)
+srcs = map(lambda s: pj('#', 'VE_Open', 'XML', 'Model', s), srcs)
 
 env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
-env.Append(CPPPATH = ['#'])
-env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-env.Append(LIBPATH = libPath,
-              LIBS = 'VE_XMLLib')
-for lib in xerces:
-   env.Append(LIBS = lib)
+##env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = 'VE_XMLLib')
+##for lib in xerces:
+##   env.Append(LIBS = lib)
+env.ParseConfig('flagpoll xerces --libs')
 
 targetLib = pj(libPath, 'VE_ModelLib')
-env.SharedLibrary(target = targetLib, source = model_srcs)
+env.SharedLibrary(target = targetLib, source = srcs)
 #env.Program(pj('#','bin',Platform,'VE_Open','VE_XML'), source = model_srcs)
