--- a/VE_Open/XML/Shader/SConscript
+++ b/VE_Open/XML/Shader/SConscript
@@ -3,7 +3,7 @@ pj = os.path.join
 
 Import('baseEnv')
 Import('libPath')
-Import( 'xerces' )
+##Import( 'xerces' )
 
 shader_srcs = Split("""
    TextureImage.cxx
@@ -17,12 +17,13 @@ shader_srcs = map(lambda s: pj('#', 'VE_Open', 'XML', 'Shader', s), shader_srcs)
 
 env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
-env.Append(CPPPATH = ['#'])
-env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-env.Append(LIBPATH = libPath,
-              LIBS = 'VE_XMLLib')
-for lib in xerces:
-   env.Append(LIBS = lib)
+##env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = 'VE_XMLLib')
+##for lib in xerces:
+##   env.Append(LIBS = lib)
+env.ParseConfig('flagpoll xerces --libs')
 
 targetLib = pj(libPath, 'VE_ShaderLib')
 env.SharedLibrary(target = targetLib, source = shader_srcs)
