--- a/VE_Xplorer/GraphicalPlugin/SConscript
+++ b/VE_Xplorer/GraphicalPlugin/SConscript
@@ -2,10 +2,11 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
-Import('osg')
-Import('xerces')
-Import('vtk')
+Import('execOsgPatTag')
+##Import('Platform')
+##Import('osg')
+##Import('xerces')
+##Import('vtk')
 Import('libPath')
 
 srcs = Split("""
@@ -15,32 +16,33 @@ srcs = Split("""
 srcs = map(lambda s: pj('#', 'VE_Xplorer', 'GraphicalPlugin', s), srcs)
 
 env = baseEnv.Copy()
-osg_tag = "_osg"
+##osg_tag = "_osg"
 ##if os.getenv('SCENE_GRAPH') == 'OSG':
 ##    osg_tag = "_osg"
 ##else:
 ##    osg_tag = "_pf"
-if os.getenv('VE_PATENTED') == 'TRUE':
-    env.Append(CXXFLAGS = '-DVE_PATENTED')
-    patented_tag = "_vep"
-else:
-    patented_tag = ''
-if os.getenv('TAO_BUILD') == 'TRUE':
-    exec_tag = '_tao'
-else:
-    exec_tag = ''
-env.Append(CPPPATH = ['#'])
-env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
+##if os.getenv('VE_PATENTED') == 'TRUE':
+##    env.Append(CXXFLAGS = '-DVE_PATENTED')
+##    patented_tag = "_vep"
+##else:
+##    patented_tag = ''
+##if os.getenv('TAO_BUILD') == 'TRUE':
+##    exec_tag = '_tao'
+##else:
+##    exec_tag = ''
+##env.Append(CPPPATH = ['#'])
+##env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
 ##env.Append(CPPPATH = pj( os.getenv('VJ_DEPS_DIR',''), 'include') )
-env.Append(LIBPATH = libPath,
-              LIBS = ['VE_SceneGraphLib%s%s' %(osg_tag, patented_tag),
-                      'VE_XplorerLib%s%s%s' %(exec_tag, osg_tag, patented_tag),
-                      'VE_UtilLib', 'VE_ModelLib', 'VE_XMLLib', 'VE_CADLib'])
-env.ParseConfig('flagpoll vtk --libs')
+##env.Append(LIBPATH = libPath,
+env.Append(LIBS = ['VE_SceneGraphLib%s' %(execOsgPatTag),
+                   'VE_XplorerLib%s' %(execOsgPatTag),
+                   'VE_UtilLib', 'VE_ModelLib', 'VE_XMLLib', 'VE_CADLib'])
+env.ParseConfig('flagpoll vtk --libs --cflags')
 ##for lib in vtk:
 ##    env.Append(LIBS = lib)
-for lib in xerces:
-    env.Append(LIBS = lib)
+env.ParseConfig('flagpoll xerces --libs --cflags')
+##for lib in xerces:
+##    env.Append(LIBS = lib)
 ##if os.getenv('SCENE_GRAPH') == 'OSG':
 ##    for lib in osg:
 ##        env.Append(LIBS = lib)
@@ -49,6 +51,5 @@ env.ParseConfig('flagpoll gmtl --cflags')
 env.ParseConfig('wx-config --cxxflags --libs')
 env.ParseConfig('vrjuggler-config --libs --extra-libs --includes')
 
-targetLib = pj(libPath, 'GraphicalPlugin%s%s%s' %(exec_tag, osg_tag,
-                                                patented_tag))
+targetLib = pj(libPath, 'GraphicalPlugin%s' %(execOsgPatTag))
 env.SharedLibrary(target = targetLib, source = srcs)
