--- a/VE_Builder/Translator/DataLoader/SConscript
+++ b/VE_Builder/Translator/DataLoader/SConscript
@@ -1,10 +1,8 @@
+##Builds DataLoaderLib
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-##Import('Platform')
-##Import( 'vtk' )
-##Import( 'boost' )
 Import('libPath')
 
 srcs = Split("""
@@ -28,18 +26,9 @@ srcs = map(lambda s: pj('#', 'VE_Builder', 'Translator', 'DataLoader', s), srcs)
 
 env = baseEnv.Copy()
 env.Append(CPPPATH = [os.getcwd()])
-##env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
-##env.Append(CPPPATH = ['#'])
-##env.Append(CPPPATH = ['#/VE_Builder/Translator'])
-##env.Append(LIBPATH = libPath,
 env.Append(LIBS = ['VE_UtilLib', 'TranslatorToVTKLib'])
-
 env.ParseConfig('flagpoll vtk --libs --cflags')
 env.ParseConfig('flagpoll boost --libs')
-##for lib in vtk:
-##   env.Append(LIBS = lib)
-##for lib in boost:
-##   env.Append(LIBS = lib)
 env.ParseConfig( 'vrjuggler-config vrj --libs --extra-libs --includes' )
 env.ParseConfig( 'vrjuggler-config vrj_ogl --libs' )
 
