--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -1,11 +1,9 @@
+##Builds VE_SceneGraphLib<tag>
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
 Import('Platform')
-##Import('osg')
-##Import('boost')
-##Import('vtk')
 Import('libPath')
 Import('execOsgPatTag')
 
@@ -33,26 +31,7 @@ srcs = Split("""
 srcs = map(lambda s: pj('#', 'VE_Xplorer', 'SceneGraph', s), srcs)
 
 env = baseEnv.Copy()
-##osg_tag = "_osg"
-##if os.getenv('SCENE_GRAPH') == 'OSG':
-##    osg_tag = "_osg"
-##else:
-##    osg_tag = "_pf"
-##if os.getenv('VE_PATENTED') == 'TRUE':
-##    env.Append(CXXFLAGS = '-DVE_PATENTED')
-##    patented_tag = "_vep"
-##else:
-##    patented_tag = ''
-##exec_tag = ''
-##env.Append(CPPPATH = ['#'])
 env.Append(CPPPATH = [os.getcwd()])
-##env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
-##env.Append(CPPPATH = pj( os.getenv('VJ_DEPS_DIR',''), 'include') )
-##env.Append(LIBPATH = libPath)
-##for lib in vtk:
-##    env.Append(LIBS = lib)
-##    for lib in osg:
-##        env.Append(LIBS = lib)
 env.ParseConfig('flagpoll osg --libs --cflags')
 env.ParseConfig('flagpoll tao --libs')
 env.ParseConfig('flagpoll vtk --libs --cflags')
