--- a/VE_Builder/Utilities/SConscript
+++ b/VE_Builder/Utilities/SConscript
@@ -1,12 +1,9 @@
+##Builds a multitude of utilities
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
 Import('cfdHostType')
-##Import('Platform')
-##Import('vtk')
-##Import('boost')
-##Import('libPath')
 
 addNormals2Poly = Split("""
    addNormals2Poly.cpp
@@ -84,18 +81,8 @@ whatIsScalarRange = Split("""
 
 env = baseEnv.Copy()
 env.Append(CPPPATH = [os.getcwd()])
-##env.Append(CPPPATH = ['#'])
-##env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
-##env.Append(CPPPATH = pj( os.getenv('VJ_DEPS_DIR',''), 'include') )
-##env.Append(LIBPATH = libPath,
 env.Append(LIBS = ['VE_UtilLib'])
 env.Append(CPPPATH = [pj('#', 'VE_Builder', 'Translator')])
-
-
-##for lib in vtk:
-##   env.Append(LIBS = lib)
-##for lib in boost:
-##   env.Append(LIBS = lib)
 env.ParseConfig('flagpoll vtk --libs --cflags')
 env.ParseConfig('flagpoll boost --libs --cflags')
 env.ParseConfig( 'vpr-config --libs --extra-libs --includes' )
