--- a/VE_Conductor/DefaultPlugin/SConscript
+++ b/VE_Conductor/DefaultPlugin/SConscript
@@ -1,10 +1,8 @@
+##Builds DefaultPlugin_UI_Dialog
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-##Import('Platform')
-##Import('xerces')
-##Import('ace_tao')
 Import('libPath')
 
 srcs = Split("""
@@ -13,27 +11,13 @@ srcs = Split("""
 """)
 
 env = baseEnv.Copy()
-##env.Append(CPPPATH = ['#'])
-##env.Append(CPPPATH = [os.getcwd()])
-##env.Append(CPPPATH = pj(os.getenv('TAO_HOME',''), 'include') )
 env.Append(CPPPATH = pj('#', 'VE_Conductor', 'Framework') )
-##env.Append(LIBPATH = libPath,
 env.Append(LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib',
                    'VE_CADLib', 'VE_ShaderLib', 'GUIPluginLib',
                    'VE_OpenModuleLib'])
-
-##for lib in xerces:
-##    env.Append(LIBS = lib)
-##for lib in ace_tao:
-##    env.Append(LIBS = lib)
 env.ParseConfig( 'wx-config --cxxflags --libs' )
 env.ParseConfig('flagpoll tao --cflags --libs')
 env.ParseConfig('flagpoll xerces --libs')
-
-##EXTRA
-##env.ParseConfig( 'vrjuggler-config --extra-libs' )
-##env.Append(CPPPATH = pj(os.getenv('VJ_DEPS_DIR'), 'include'))
-##env.Append(CPPPATH = pj('#', 'VE_Builder', 'Translator'))
 
 targetLib = pj(libPath, 'DefaultPlugin_UI_Dialog')
 env.SharedLibrary(targetLib, source = srcs)
