--- a/VE_Conductor/Framework/SConscript
+++ b/VE_Conductor/Framework/SConscript
@@ -1,19 +1,9 @@
+##Builds WinClient program
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
 Import('cfdHostType')
-##Import('Platform')
-##Import( '*' )  ##Imports all; previous Imports redundant.
-##Import('libPath')
-
-##Check for Redundancy
-##skel_srcs = Split("""
-##   moduleC.cpp 
-##   moduleS.cpp 
-##   VjObsC.cpp 
-##   VjObsS.cpp 
-##""")
 
 framework_srcs = Split("""
    App.cpp 
@@ -44,60 +34,23 @@ framework_srcs = Split("""
    UI_TeacherTab.cpp
    UI_TransientDialog.cxx
 """)
-
-##utility_srcs = Split("""
-##   BaseDialog.cxx
-##   ROIDialog.cxx""")
-
-##gui_srcs = Split("""
-##   spinctld.cpp
-##""")
-
-##Tacks on paths to the srcs lists above.
-##skel_srcs = map(lambda s: pj('#', 'VE_Open', 'skel', s), skel_srcs)
-framework_srcs = map(lambda s: pj('#', 'VE_Conductor', 'Framework', s), framework_srcs)
-##utility_srcs = map(lambda s: pj('#', 'VE_Conductor', 'Utilities', s), utility_srcs)
-##gui_srcs = map(lambda s: pj('#', 'VE_Builder', 'Utilities', 'gui', s), gui_srcs)
-
-##Combines all of the srcs lists into frameworks_srcs
-srcs = list()
-##frameworks_srcs.extend(skel_srcs)
-##frameworks_srcs.extend(utility_srcs)
-srcs.extend(framework_srcs)
-##frameworks_srcs.extend(gui_srcs)
+srcs = map(lambda s: pj('#', 'VE_Conductor', 'Framework', s), framework_srcs)
 
 env = baseEnv.Copy()
 env.Append(CPPPATH = [os.getcwd()])
-##env.Append(CPPPATH = ['#'])
 env.Append(CPPPATH = pj('#', 'VE_Open', 'skel'))
-##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-##env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') )
 env.Append(CPPPATH = pj(os.getenv('VJ_BASE_DIR', ''), 'bin'))
-##env.Append(LIBPATH = libPath,
 env.Append(LIBS = ['VE_ConductorLib', 'GUIPluginLib', 'VE_XMLLib', 'VE_ModelLib',
                    'VE_CADLib', 'VE_ShaderLib', 'VE_Conductor_UtilitiesLib',
                    'VE_OpenModuleLib'])
 
-##for lib in xerces:
-##   env.Append(LIBS = lib)
-##for lib in ace_tao:
-##   env.Append(LIBS = lib)
-##for lib in vtk:
-##   env.Append(LIBS = lib)
-##for lib in osg:
-##   env.Append(LIBS = lib)
-##for lib in boost:
-##   env.Append(LIBS = lib)
 env.ParseConfig( 'vpr-config --libs --extra-libs --includes' )
-#env.ParseConfig( 'corona-config --libs' )
 env.ParseConfig( 'vrjuggler-config vrj --libs --extra-libs --includes' )
 env.ParseConfig( 'wx-config --cxxflags --libs' )
 env.ParseConfig('flagpoll tao --cflags --libs')
 env.ParseConfig('flagpoll xerces --libs')
 env.ParseConfig('flagpoll osg --libs')
 env.ParseConfig('flagpoll boost --libs')
-##env.ParseConfig('flagpoll vtk --libs --cflags') ##Not needed? Check.
 
-#env.SharedLibrary(target = '#/Framework', source = frameworks_srcs)
 env.Program(pj('#','bin',cfdHostType,'WinClient'), source = srcs)
 
