--- a/VE_Open/XML/Model/SConscript
+++ b/VE_Open/XML/Model/SConscript
@@ -1,9 +1,9 @@
+##Builds VE_ModelLib
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
 Import('libPath')
-##Import('xerces')
 
 srcs = Split("""
    Point.cxx
@@ -18,15 +18,8 @@ srcs = Split("""
 srcs = map(lambda s: pj('#', 'VE_Open', 'XML', 'Model', s), srcs)
 
 env = baseEnv.Copy()
-#env.Append(CPPPATH = [os.getcwd()])
-##env.Append(CPPPATH = ['#'])
-##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-##env.Append(LIBPATH = libPath,
 env.Append(LIBS = 'VE_XMLLib')
-##for lib in xerces:
-##   env.Append(LIBS = lib)
 env.ParseConfig('flagpoll xerces --libs')
 
 targetLib = pj(libPath, 'VE_ModelLib')
 env.SharedLibrary(target = targetLib, source = srcs)
-#env.Program(pj('#','bin',Platform,'VE_Open','VE_XML'), source = model_srcs)
