--- a/VE_Open/XML/SConscript
+++ b/VE_Open/XML/SConscript
@@ -1,8 +1,7 @@
+##Builds VE_XMLLib
 import os, sys, string
 import practice
 pj = os.path.join
-
-##Import( 'xerces' )
 
 Import('baseEnv')
 Import('libPath')
@@ -33,14 +32,6 @@ srcs = Split("""
 srcs = map(lambda s: pj('#', 'VE_Open', 'XML', s), srcs)
 
 env = baseEnv.Copy()
-#VE_SUITE_HOME = os.getenv('VE_SUITE_HOME','')
-#env.Append(CPPPATH = [os.getcwd()])
-##env.Append(CPPPATH = ['#'])
-##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-#env.Append(LIBPATH = libPath,
-#              LIBS = 'vrshares')
-##for lib in xerces:
-##    env.Append(LIBS = lib)
 
 env.ParseConfig('flagpoll xerces --libs')
 ##Get apr config.
@@ -53,4 +44,3 @@ env.ParseConfig('apu%s --includes --link-ld --libs' %suffix)
 
 targetLib = pj(libPath, 'VE_XMLLib')
 env.SharedLibrary(target = targetLib, source = srcs)
-#env.Program(pj('#','bin',Platform,'VE_Open','VE_XML'), source = srcs)
