--- a/VE_Open/XML/Shader/SConscript
+++ b/VE_Open/XML/Shader/SConscript
@@ -1,9 +1,9 @@
+##Builds VE_ShaderLib
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
 Import('libPath')
-##Import( 'xerces' )
 
 shader_srcs = Split("""
    TextureImage.cxx
@@ -13,18 +13,11 @@ shader_srcs = Split("""
    ShaderCreator.cxx 
 """)
 
-shader_srcs = map(lambda s: pj('#', 'VE_Open', 'XML', 'Shader', s), shader_srcs)
+srcs = map(lambda s: pj('#', 'VE_Open', 'XML', 'Shader', s), shader_srcs)
 
 env = baseEnv.Copy()
-#env.Append(CPPPATH = [os.getcwd()])
-##env.Append(CPPPATH = ['#'])
-##env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-##env.Append(LIBPATH = libPath,
 env.Append(LIBS = 'VE_XMLLib')
-##for lib in xerces:
-##   env.Append(LIBS = lib)
 env.ParseConfig('flagpoll xerces --libs')
 
 targetLib = pj(libPath, 'VE_ShaderLib')
-env.SharedLibrary(target = targetLib, source = shader_srcs)
-#env.Program(pj('#','bin',Platform,'VE_Open','VE_XML'), source = shader_srcs)
+env.SharedLibrary(target = targetLib, source = srcs)
