--- a/VE_Open/skel/SConscript
+++ b/VE_Open/skel/SConscript
@@ -1,9 +1,9 @@
+##Builds VE_OpenModuleLib
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
 Import('libPath')
-##Import('ace_tao')
 
 srcs = Split("""
    moduleS.cpp
@@ -14,16 +14,8 @@ srcs = Split("""
 srcs = map(lambda s: pj('#', 'VE_Open', 'skel', s), srcs)
 
 env = baseEnv.Copy()
-#env.Append(CPPPATH = [os.getcwd()])
-##env.Append(CPPPATH = ['#'])
-##env.Append(CPPPATH = pj( env['TAO_HOME'], 'include') )
-##env.Append(CPPPATH = pj( '/home/vr/Applications/TSVEG/Libraries/Release/Opt/ACE-TAO-5.4/Linux-RHEL_4', 'include') )
-##env.Append(LIBPATH = libPath,
 env.Append(LIBS = ['VE_XMLLib', 'VE_ShaderLib'])
 env.ParseConfig('flagpoll tao --cflags --libs')
-##for lib in ace_tao:
-##   env.Append(LIBS = lib)
 
 targetLib = pj(libPath, 'VE_OpenModuleLib')
 env.SharedLibrary(target = targetLib, source = srcs)
-#env.Program(pj('#','bin',Platform,'VE_Open','VE_XML'), source = skel_srcs)
