--- a/VE_Xplorer/SceneGraph/Utilities/SConscript
+++ b/VE_Xplorer/SceneGraph/Utilities/SConscript
@@ -1,10 +1,8 @@
+##Builds VE_SceneGraph_UtilitiesLib
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-##Import('Platform')
-##Import('osg')
-##Import('xerces')
 Import('libPath')
 
 srcs = Split("""
@@ -16,12 +14,6 @@ srcs = Split("""
 srcs = map(lambda s: pj('#', 'VE_Xplorer', 'SceneGraph',
                         'Utilities', s), srcs)
 env = baseEnv.Copy()
-##env.Append(CPPPATH = ['#'])
-##for lib in xerces:
-##    env.Append(LIBS = lib)
-##if os.getenv('SCENE_GRAPH') == 'OSG':
-##    for lib in osg:
-##        env.Append(LIBS = lib)
 env.ParseConfig('flagpoll osg --libs --cflags')
 env.ParseConfig('flagpoll xerces --libs')
 env.ParseConfig('wx-config --cxxflags --libs')
