--- a/VE_Xplorer/TextureBased/SConscript
+++ b/VE_Xplorer/TextureBased/SConscript
@@ -1,11 +1,8 @@
+##Builds VE_TextureBasedLib<tag>
 import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-##Import('Platform')
-##Import('osg')
-##Import('boost')
-##Import('vtk')
 Import('libPath')
 Import('execOsgPatTag')
 
@@ -39,27 +36,7 @@ srcs = Split("""
 srcs = map(lambda s: pj('#', 'VE_Xplorer', 'TextureBased', s), srcs)
 
 env = baseEnv.Copy()
-##if os.getenv('SCENE_GRAPH') == 'OSG':
-##    osg_tag = "_osg"
-##else:
-##    osg_tag = "_pf"
-##if os.getenv('VE_PATENTED') == 'TRUE':
-##    env.Append(CXXFLAGS = '-DVE_PATENTED')
-##    patented_tag = "_vep"
-##else:
-##    patented_tag = ''
-##exec_tag = ''
-##env.Append(CPPPATH = ['#'])
-##env.Append(CPPPATH = pj( os.getenv('VTK_BASE_DIR',''), 'include', 'vtk') )
-##env.Append(LIBPATH = libPath,
 env.Append(LIBS = 'VE_UtilLib')
-##for lib in vtk:
-##    env.Append(LIBS = lib)
-##for lib in boost:
-##    env.Append(LIBS = lib)
-##if os.getenv('SCENE_GRAPH') == 'OSG':
-##    for lib in osg:
-##        env.Append(LIBS = lib)
 env.ParseConfig('flagpoll vtk --libs --cflags')
 env.ParseConfig('flagpoll osg --libs --cflags')
 env.ParseConfig('flagpoll boost --libs')
